# FARFAN_MCDPP

./: .dockerignore  .env.example  .envrc  .gitignore  .importlinter  .naming_exemptions  .pre-commit-config.yaml  .pylintrc.graceful_degradation  .semgrep_fix_typo.yaml  AGENTS.md  AGENT_IMPLEMENTATION_SUMMARY.md  AGGREGATION_ENHANCEMENT_EXECUTIVE_SUMMARY.md  AGGREGATION_PIPELINE_IMPLEMENTATION_SUMMARY.md  ANALISIS_ESTRATEGICO_CONSOLIDACION.md  ANALISIS_UBICACION_METODO_N2_IDEAL.md  ARCHITECTURAL_TRANSFORMATION_MASTER_PLAN.md  ATROZ_IMPLEMENTATION_GUIDE.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FACTORY_PATTERN.md  AUDIT_MATHEMATICAL_SCORING_MACRO.md  AUDIT_MICRO_SCORING_MATHEMATICS.md  AUDIT_PHASE2_CRITICAL_FINDINGS.md  AUDIT_QUICK_REFERENCE.txt  AUDIT_REPAIRS_COMPLETE.md  AUDIT_REPORT_CONTRACTS_COMPLETENESS.md  AUDIT_REPORT_EPISTEMOLOGY_PIPELINE.md  AUDIT_REPORT_SIGNALS.md  AUDIT_REPORT_V4.md  AUDIT_SUMMARY_EXECUTIVE.md  AUDIT_TRAIL_IMPLEMENTATION.md  BATCH1_SCIENTIFIC_VERIFICATION_REPORT.md  BATCH4_STRATEGIC_IMPLEMENTATION_PLAN.md  BATCH6_CQVR_EVALUATION_COMPLETE.md  BATCH7_QUICK_REFERENCE.txt  BATCH_8_FINAL_SUMMARY.md  BATCH_8_QUICK_REFERENCE.md  BATCH_9_CERTIFICATION_REPORT.md  BLOCKER_IDENTIFICATION_REPORT.md  BROKEN_IMPORTS_COMPLETE_LIST.txt  CALIBRATION_AUDIT_README.md  (+565 more)
.backup/: README.md
.mcp-debug-tools/: config.json
.venv-1/: pyvenv.cfg
.venv312/: pyvenv.cfg
_build/: EMPIRICAL_CORPUS_INTEGRATION_REPORT.md
artifacts/: CQVR_EVALUATION_REPORT.md  __future_correction_final_report.json  __future_dryrun_report.json  audit_matrix_metrics_delta.json  checklist_verification_report.json  circuit_breaker_state.json  consumers_by_stage.json  contract_evidence_harvest_v3_2025-12-19_Q001-Q030.json  contract_field_alignment_applied_expected_elements_2025-12-19.json  contract_field_alignment_applied_modality_scoring_definition_ref_2025-12-19.json  contract_field_alignment_applied_patterns_Q007_2025-12-19.json  contract_field_alignment_plan_expected_elements_2025-12-19.json  contract_field_alignment_plan_modality_scoring_definition_ref_2025-12-19.json  contract_vs_monolith_report_2025-12-19.json  conversation_untracked_backup_2025-12-19.tgz  cqvr_evaluation_full.json  expected_elements_mismatch_cases_2025-12-19.json  future_violations_report.json  future_violations_report_v2.json  future_violations_report_v3.json  hard_coded_method_count_literals_report_2025-12-19.json  hard_coded_method_count_literals_report_postpatch_2025-12-19.json  hard_coded_method_count_literals_report_postpatch_v2_2025-12-19.json  matrix_irrigability_report.json  matrix_sabana.csv  matrix_sabana.json  narrative_method_count_normalization_applied_2025-12-19.json  narrative_method_count_normalization_applied_v2_2025-12-19.json  narrative_method_count_normalization_plan_2025-12-19.json  narrative_method_count_normalization_plan_v2_2025-12-19.json  sabana_final_decisiones.csv  sabana_final_decisiones.json  signals_full_map.csv  signals_full_map.json  signals_vehicle_map.csv  signals_vehicle_map.json  sisas_audit_result.json  sisas_severe_audit_v2.json  traceability_repair_applied_2025-12-19.json  traceability_repair_plan_2025-12-19.json
calibration_parametrization_system/: INDEX.md  batch_migrate.py  verify_cohort.py
canonic_questionnaire_central/: CANONICAL_NOTATION_SPECIFICATION.md  IMPROVEMENTS_DOCUMENTATION.md  Q012_comprehensive_quantitative_validation_report.json  __init__.py  canonical_notation.json  constants.py  macro_question.json  main_policy_acess_sensitive  meso_questions.json  modular_manifest.json  niveles_abstraccion.json  pattern_registry.json  questionnaire_index.json  questionnaire_monolith.json  questionnaire_monolith.json.backup  questionnaire_monolith_v3.json  questionnaire_schema.json  resolver.py  update_questionnaire_metadata.py
code_audit_pdfs/: README.md
config/: CANONICAL_EXECUTOR_CATALOG_README.md  SEMANTIC_METADATA_README.md  fusion_requirements_spec.md  intrinsic_calibration.json  intrinsic_calibration_rubric.json  method_parameters.json  quality_thresholds.json  semantic_metadata_examples.json  semantic_taxonomy.json
contract_templates/: INDEX.md  README.md  VALIDATION_SUMMARY.md  assembly_rules_alignment.json  epistemological_foundation_template.json  methodological_depth_template.json
contracts/: phase1_chain_report.json  phase2_chain_report_fixed.json  phase2_chain_report_fixed2.json  phase3_chain_report.json  phase3_chain_report_fixed.json  phase3_chain_report_fixed_final.json  phase4_chain_report.json  phase4_chain_report_fixed2.json  phase4_chain_report_fixed3.json  phase5_chain_report.json  phase6_chain_report.json  phase7_chain_report.json  phase8_chain_report_fixed.json  phase8_chain_report_fixed2.json  phase9_chain_report.json  phase9_chain_report_fixed.json  phase9_chain_report_fixed2.json
contracts_v4/: D1-Q1-v4.json  D1-Q2-v4.json  D1-Q3-v4.json  D1-Q4-v4.json  D1_Q1_contract_v4.json  D1_Q2_contract_v4.json  D1_Q3_contract_v4.json  D1_Q4_contract_v4.json  D1_Q5_contract_v4.json  D2-Q1-v4.json  D2-Q3-v4.json  D2_Q1_contract_v4.json  D2_Q2_contract_v4.json  D2_Q3_contract_v4.json  D2_Q4_contract_v4.json  D2_Q5_contract_v4.json  D3-Q2-v4.json  D3-Q3-v4.json  D3-Q4-v4.json  D3_Q1_contract_v4.json  D3_Q2_contract_v4.json  D3_Q3_contract_v4.json  D3_Q4_contract_v4.json  D3_Q5_contract_v4.json  D4-Q2-v4.json  D4-Q3-v4.json  D4-Q5-v4.json  D4_Q1_contract_v4.json  D4_Q2_contract_v4.json  D4_Q3_contract_v4.json  D4_Q4_contract_v4.json  D4_Q5_contract_v4.json  D5-Q1-v4.json  D5-Q2-v4.json  D5-Q3-v4.json  D5-Q4-v4.json  D5-Q5-v4.json  D5_Q1_contract_v4.json  D5_Q2_contract_v4.json  D5_Q3_contract_v4.json  (+12 more)
cqvr_batch_11_reports/: BATCH_11_EXECUTIVE_SUMMARY.md  Q251_CQVR_EVALUATION.md  Q252_CQVR_EVALUATION.md  Q253_CQVR_EVALUATION.md  Q254_CQVR_EVALUATION.md  Q255_CQVR_EVALUATION.md  Q256_CQVR_EVALUATION.md  Q257_CQVR_EVALUATION.md  Q258_CQVR_EVALUATION.md  Q259_CQVR_EVALUATION.md  Q260_CQVR_EVALUATION.md  Q261_CQVR_EVALUATION.md  Q262_CQVR_EVALUATION.md  Q263_CQVR_EVALUATION.md  Q264_CQVR_EVALUATION.md  Q265_CQVR_EVALUATION.md  Q266_CQVR_EVALUATION.md  (+9 more)
(+7546 files in other folders)
