[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farfan-mcdpp"
version = "1.0.0"
description = "Framework for Advanced Retrieval of Administrative Narratives - Deterministic Policy Analysis Pipeline"
readme = "README.ES.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "F.A.R.F.A.N Pipeline Team"}
]
keywords = [
    "policy analysis",
    "development plans",
    "Colombian policy",
    "value chain analysis",
    "causal mechanisms",
    "bayesian inference", 
    "causal inference",
    "natural language processing",
    "machine learning",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
]

dependencies = [
    "fastapi>=0.109.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "transformers>=4.41.0",
    "sentence-transformers>=3.1.0",
    "torch>=2.1.0",
    "pymc>=5.16.0",
    "scikit-learn>=1.6.0",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "networkx>=3.0",
    "spacy>=3.7.0",
    "jsonschema>=4.21.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "sse-starlette>=2.0.0",
    "werkzeug>=3.0.0",
    "structlog>=24.1.0",
    "img2table>=1.4.0",
    "opencv-contrib-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "tabula-py>=2.9.0",
    "typing_extensions>=4.10.0",
    "bcrypt>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".git", ".venv", "venv", "migrations", "__pycache__"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "migrations/",
    "tests/",
    ".venv/",
    "venv/",
    "__pycache__/"
]

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "df"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "migrations"]
severity = "medium"
confidence = "medium"

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501", "B008"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "build",
    "dist"
]
